# Solar

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/glad/: glad.h
src/: glad.c
